# inference_results_v2.0

./: README.md
closed/ASUSTeK/: Makefile  README_Triton_CPU.md  results_metadata.json
closed/ASUSTeK/documentation/: performance_tuning_guide.md
closed/ASUSTeK/results/: submission_checker_log.txt
closed/Alibaba/: calibration.md
closed/Azure/: Makefile
closed/Dell/: Makefile  README.md  calibration.md
closed/Fujitsu/: Makefile  README.md
closed/FuriosaAI/: README.md  submission_checklist.md
closed/FuriosaAI/code/mlperf/: Cargo.toml  build.rs  rust-toolchain.toml  rustfmt.toml
closed/FuriosaAI/code/mlperf/benches/: iai_post_process.rs  post_process.rs
closed/FuriosaAI/code/mlperf/cpp/: clang_format.sh  ssd_large.h  ssd_small.h  unlower.h
closed/FuriosaAI/code/mlperf/models/: mlperf_large.conf  mlperf_small.conf
closed/FuriosaAI/code/mlperf/scripts/: example_param_sweep.sh  offline.sh  over_batch.sh  param_sweep.sh  single_stream.sh  trace.sh  update_cached.sh
closed/FuriosaAI/code/mlperf/src/: lib.rs  utils.rs
closed/FuriosaAI/code/mlperf/src/resnet50/: mod.rs
closed/FuriosaAI/code/mlperf/src/resnet50_block/: mod.rs
closed/FuriosaAI/code/mlperf/src/ssd_large/: mod.rs  value.rs
closed/FuriosaAI/code/mlperf/src/ssd_large_block/: mod.rs
closed/FuriosaAI/code/mlperf/src/ssd_small/: mod.rs
closed/FuriosaAI/code/mlperf/src/ssd_small_block/: mod.rs
closed/GIGABYTE/: README.md
closed/H3C/: Makefile  README.md  results_metadata.json
closed/Inspur/: Makefile  README.md  calibration.md  results_metadata.json
closed/Krai/: calibration.md
closed/Lenovo/: Makefile  NVIDIA_README.md  README.md
closed/NVIDIA/: Makefile  README.md  README_Triton_CPU.md  results_metadata.json
closed/Nettrix/: Makefile  README.md  calibration.md
closed/Qualcomm/: calibration.md
closed/ZhejiangLab/: Makefile  results_metadata.json
open/Alibaba/: README.md
open/Intel/: README.md  calibration.md
(+32905 files in other folders)
